# Qt_WeatherForecast

./: .gitignore  README.md  WeatherForecast.pro  apiclient.cpp  apiclient.h  chartwidget.cpp  chartwidget.h  datacache.cpp  datacache.h  main.cpp  res.qrc  ui_widget.h  weatherTool.h  weather_cache.db  weatherdata.h  widget.cpp  widget.h  widget.ui
Cmake_WeatherForecast/WeatherForecast/: CMakeLists.txt  apiclient.cpp  apiclient.h  chartwidget.cpp  chartwidget.h  datacache.cpp  datacache.h  main.cpp  res.qrc  weatherTool.h  weatherdata.h  widget.cpp  widget.h  widget.ui
city_weather/: city_weather.json
debug/: object_script.WeatherForecast.Debug
docs/: 天气预报.md  项目分析.md
release/: object_script.WeatherForecast.Release
res/weatherforecast_icon/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
